crates/mockiato-compiletest/tests/ui/trait_decl_with_non_type_generics.rs
use mockiato::mockable;

#[mockable]
trait TraitWithLifetime<'a> {}

#[mockable]
trait TraitWithLifetimeAndGenericParam<'a, B> {}

fn main() {}
